--- a/car-rental-kenya-api/package.json
+++ b/car-rental-kenya-api/package.json
@@ -23,8 +23,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.22",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3"
   }
 }
